<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TTT_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TicTacToe">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/scoreBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/player2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn00"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image1" />

        <ImageButton
            android:id="@+id/btn01"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image2" />

        <ImageButton
            android:id="@+id/btn02"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image4" />

        <ImageButton
            android:id="@+id/btn11"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image5" />

        <ImageButton
            android:id="@+id/btn12"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn20"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image7" />

        <ImageButton
            android:id="@+id/btn21"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image8" />

        <ImageButton
            android:id="@+id/btn22"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/image9" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/teal_200"
            android:paddingHorizontal="10dp"
            android:text="@string/reset_game"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />
    </RelativeLayout>

</LinearLayout>