<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/minigameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MinigameFragment">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:clickable="false"
        android:contentDescription="@string/game1"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tic_tac_toe" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/game2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton1"
        app:layout_constraintStart_toStartOf="@+id/imageButton1"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1"
        app:srcCompat="@drawable/random_guessing" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/game3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/test" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/game4"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/test" />

</androidx.constraintlayout.widget.ConstraintLayout>